	  - Renamed xscrollFromWidget() -> xscroll()
	  - Pan the viewport up/down when cylcling through elements, if the element is above/below the current viewport. 
	* R383 -- When opening new window, set select mode by default.
	* R384 -- FIXED: Release-critical MusicXML export bug when exporting notes in voice number > 2.
	* R385 -- ADDED: Autobeam when inserting notes in non-first voices now works.
	  - selectNearestMidiEvent -> getNearestMidiEvent, as it doesn't make the element actual, but only gets its pointer.
	* R386 -- ADDED: Arbitrary text is now saved/loaded in UTF8 format as well.
	* R388 -- FIXED: Cycling through elements when one is deleted works correctly. getNearestMidiEvent() behaviour fixed.
	* R389 -- ADDED: Paste also works only if a single element is selected (ie. no selection block).
	* R390 -- FIXED: Export LilyPond alternative repeat markings correctly.
	* R392 -- FIXED: Placed Clef and/or KeySig is now properly interpreted in non-first voices when the rhythm is different than in the first voice. Playback is still messed up. Removed some debugging stuff.
	* R399 -- FIXED: Key shortcuts not working anymore on KDE3.5. Thanks to Adam.
	* R400 -- FIXED: Compiler warnings for chord.cpp/h, chorddiagram.cpp/h, clef.cpp, midiexport.cpp/h, musixtex.cpp and musicxmlcommon.cpp/h.
	* R401: small LilyPond export filter fix: Pianostaff (Grandstaff) accepts lyrics.
	* R402: Insert clef dialog now supports:
	  - mouse wheel for scrolling
	  - double click to confirm the selection
	  - up/down keys to walk through elements
	  - return/escape keys to confirm/cancel the selection
	  TODO: Get rid of the stupid timer that calls refresh procedures and start using Qt's implemented solutions for that (needs probably some restructuring as well).
	* R403: Fixed compiler warnings: lexik.ll, grammar.yy, lilyexport.cpp/h, chord.cpp/h, staff.cpp/h, mainframewidget.cpp/h, voice.cpp/h, resource.cpp/h.
